Backported for Java 11/Vaadin 23